--- a/src/app/features/card-pokemon/card-pokemon.component.scss
+++ b/src/app/features/card-pokemon/card-pokemon.component.scss
@@ -1,7 +1,7 @@
 .pokemon-detail {
   width: 400px;
   position: fixed;
-  top: 5%;
+  top: 70px;
   left: calc((100% - 400px) / 2);
   display: flex;
   flex-direction: column;
